force-app/main/default/objects/Individual/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email address, US-4334</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>