force-app/main/default/objects/Individual/fields/Guid__c.field-meta.xml
<CustomField>
    <fullName>Guid__c</fullName>
    <description>Related customer GUID, US-4334</description>
    <externalId>true</externalId>
    <label>Guid</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>