force-app/main/default/objects/Individual/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number, US-4334</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>